name: Game
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: Game
data-dir: ""
 
executable Game
    build-depends: GLUT -any, OpenGL -any, QuickCheck -any, base -any,
                   containers -any, hslogger -any, time -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: Game.Engine.Utils Game.TowDef.Drawings Game.TowDef
                   Game.Engine Game.RunMain Game.Engine.Input Game.Engine.GlobState
                   Game.Engine.GameLoop
 