name: Game
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: Game
data-dir: ""
 
executable Game
    build-depends: GLUT -any, OpenGL -any, QuickCheck -any, array -any,
                   base -any, containers -any, hslogger -any, pngload -any, time -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: Game.Engine.PNG Game.Engine.Textures
                   Game.TowDef.Field Game.Engine.Data Game.TowDef Game.RunMain
                   Game.Engine Game.TowDef.Drawings Game.Engine.Utils
                   Game.Engine.Input Game.Engine.GlobState Game.Engine.GameLoop
 