name: Game
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: Game
description:  
data-dir: ""
 
executable Game
    build-depends: GLUT -any, OpenGL -any, QuickCheck -any, array -any,
                   base -any, containers -any, directory -any, hslogger -any,
                   pngload -any, time -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: Game.TowDef Game.RunMain Game.Engine
                   Game.TowDef.Field Game.TowDef.Drawings Game.Engine.Utils
                   Game.Engine.Textures Game.Engine.PNG Game.Engine.Input
                   Game.Engine.GlobState Game.Engine.GameLoop Game.Engine.Data
 